<!--
    Tura - Application generation solution

    Copyright 2008-2026 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.tura.model-designer</groupId>
		<artifactId>model-designer-parent</artifactId>
		<version>6.3.0</version>
	</parent>

	<groupId>org.tura.model-designer.test</groupId>
	<artifactId>integration-testing</artifactId>
	<packaging>jar</packaging>

	<name>Metamodel designer :: Integration Tests</name>
	<description>Metamodel designer Integration Tests </description>

	<dependencies>

		<dependency>
			<groupId>org.tura.cli.metamodel.tura-model</groupId>
			<artifactId>tura-neo4j-model-command</artifactId>
		</dependency>


		<dependency>
			<groupId>org.tura.cli.metamodel.tura-model</groupId>
			<artifactId>model</artifactId>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
		</dependency>


	</dependencies>


	<build>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<test>org.tura.model.designer.test.suite.TestSuite</test>
					<argLine>
						--add-opens java.base/java.util=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>